--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import './react-grid-layout.css';
+@import './react-resizable.css';
