--- a/styles/react-resizable.css
+++ b/styles/react-resizable.css
@@ -1,12 +1,14 @@
 .react-resizable-handle {
   position: absolute;
-  width: 4px;
-  height: 20px;
   background-color: white;
-  border: 1px solid lightblue;
-  border-radius: 12px;
+  border: 1px solid #2563eb;
   box-sizing: border-box;
-  padding: 0 4px 4px 0;
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
+.react-resizable-handle:hover {
+  background-color: #2563eb;
 }
 
 .react-resizable-handle-sw {
@@ -15,8 +17,6 @@
   margin: 0 0 -3px -3px;
   cursor: sw-resize;
   border-radius: 100%;
-  width: 12px;
-  height: 12px;
 }
 .react-resizable-handle-se {
   bottom: 0;
@@ -24,8 +24,6 @@
   margin: 0 -3px -3px 0;
   cursor: se-resize;
   border-radius: 100%;
-  width: 12px;
-  height: 12px;
 }
 .react-resizable-handle-nw {
   top: 0;
@@ -34,8 +32,6 @@
   cursor: nw-resize;
   transform: rotate(180deg);
   border-radius: 100%;
-  width: 12px;
-  height: 12px;
 }
 .react-resizable-handle-ne {
   top: 0;
@@ -44,36 +40,4 @@
   cursor: ne-resize;
   transform: rotate(270deg);
   border-radius: 100%;
-  width: 12px;
-  height: 12px;
-}
-.react-resizable-handle-w,
-.react-resizable-handle-e {
-  top: 50%;
-  margin-top: -10px;
-  cursor: ew-resize;
-}
-.react-resizable-handle-w {
-  left: 0;
-  margin-left: -3px;
-}
-.react-resizable-handle-e {
-  right: 0;
-  margin-right: -3px;
-}
-.react-resizable-handle-n,
-.react-resizable-handle-s {
-  left: 50%;
-  margin-left: -10px;
-  cursor: ns-resize;
-}
-.react-resizable-handle-n {
-  top: 0;
-  margin-top: -10px;
-  transform: rotate(90deg);
-}
-.react-resizable-handle-s {
-  bottom: 0;
-  margin-bottom: -10px;
-  transform: rotate(90deg);
 }
